--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>jersey-media-sse</artifactId>
             <version>2.35</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.0</version>
+        </dependency>
 
         <!-- Kafka Test Dependencies -->
         <dependency>
