--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 # Sets up two Kafka Clusters, each with one broker and a Connect cluster with one node.
 # No SSL/SASL is used, auto create topics is enabled and everyone hos access to resources if no ACLS are used
-# Local broker  : Internal port  : 19092
+# Kafka broker  : Internal port  : 19092
 #                 Forwarded port : 9092
-# Remote broker : Internal port  : 19093
-#                 Forwarded port : 9093
 # Connect node  : Internal port  : 8082
 #                 Forwarded port : 8082
 ---
@@ -18,7 +16,7 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
 
-  brokerLocal:
+  broker:
     image: confluentinc/cp-kafka:6.2.1
     hostname: local-broker
     depends_on:
@@ -39,34 +37,14 @@ services:
       KAFKA_NUM_PARTITIONS: 1
       KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
 
-  brokerRemote:
-    image: confluentinc/cp-kafka:6.2.1
-    hostname: remote-broker
-    depends_on:
-      - zookeeper
-    ports:
-      - "9093:9093"
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181/remoteCluster'
-      KAFKA_ADVERTISED_LISTENERS: 'INNER://remote-broker:19093,OUTER://localhost:9093'
-      KAFKA_LISTENERS: 'INNER://remote-broker:19093,OUTER://remote-broker:9093'
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INNER:PLAINTEXT,OUTER:PLAINTEXT'
-      KAFKA_INTER_BROKER_LISTENER_NAME: INNER
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
-      KAFKA_MIN_INSYNC_REPLICAS: 1
-      KAFKA_NUM_PARTITIONS: 1
-      KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
 
   connect:
     image: confluentinc/cp-kafka-connect:6.2.1
     hostname: connect
     depends_on:
-      - brokerLocal
+      - broker
     volumes:
-      - ./plugins:/plugins
+      - ./target/connect-plugin:/plugins
     ports:
       - "8082:8082"
     environment:
