--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,6 @@ services:
       KAFKA_NUM_PARTITIONS: 1
       KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
 
-
   connect:
     image: confluentinc/cp-kafka-connect:6.2.1
     hostname: connect
@@ -63,4 +62,5 @@ services:
       CONNECT_INTERNAL_VALUE_CONVERTER: 'org.apache.kafka.connect.json.JsonConverter'
       CONNECT_REST_ADVERTISED_HOST_NAME: 'localhost'
       CONNECT_PLUGIN_PATH: '/plugins'
+      CONNECT_LOG4J_LOGGERS: "log4j.logger.io.confluent.wikipedia-source-connector=DEBUG,org.apache.kafka.connect=DEBUG"
 
