--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <slf4j-simple.version>1.7.30</slf4j-simple.version>
         <mockito.version>3.5.7</mockito.version>
         <junit.jupiter.version>5.7.0</junit.jupiter.version>
+        <cxf-version>3.5.1</cxf-version>
     </properties>
 
     <dependencies>
@@ -36,15 +37,25 @@
             <version>${slf4j-simple.version}</version>
             <scope>test</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.glassfish.jersey.core</groupId>-->
+<!--            <artifactId>jersey-client</artifactId>-->
+<!--            <version>2.35</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.glassfish.jersey.media</groupId>-->
+<!--            <artifactId>jersey-media-sse</artifactId>-->
+<!--            <version>2.35</version>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>org.glassfish.jersey.core</groupId>
-            <artifactId>jersey-client</artifactId>
-            <version>2.35</version>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-rs-client</artifactId>
+            <version>${cxf-version}</version>
         </dependency>
         <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-sse</artifactId>
-            <version>2.35</version>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-rs-sse</artifactId>
+            <version>${cxf-version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
