--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
                             <type>jar</type>
                             <classifier>jar-with-dependencies</classifier>
                             <overWrite>false</overWrite>
-                            <outputDirectory>${project.build.directory}/connect-plugin</outputDirectory>
+                            <outputDirectory>${project.basedir}/plugin-jars</outputDirectory>
                         </artifactItem>
                     </artifactItems>
                     <outputDirectory>${project.build.directory}/wars</outputDirectory>
