--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,30 +36,32 @@ services:
       KAFKA_MIN_INSYNC_REPLICAS: 1
       KAFKA_NUM_PARTITIONS: 1
       KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
-
-  connect:
-    image: confluentinc/cp-kafka-connect:6.2.1
-    hostname: connect
-    depends_on:
-      - broker
     volumes:
       - ./plugin-jars:/plugins
-    ports:
-      - "8082:8082"
-    environment:
-      CONNECT_BOOTSTRAP_SERVERS: 'local-broker:19092'
-      CONNECT_REST_PORT: '8082'
-      CONNECT_GROUP_ID: 'connect-quickstart'
-      CONNECT_CONFIG_STORAGE_TOPIC: 'connect-quickstart-config'
-      CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: 1
-      CONNECT_OFFSET_STORAGE_TOPIC: 'connect-quickstart-offsets'
-      CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: 1
-      CONNECT_STATUS_STORAGE_TOPIC: 'connect-quickstart-status'
-      CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
-      CONNECT_KEY_CONVERTER: 'org.apache.kafka.connect.json.JsonConverter'
-      CONNECT_VALUE_CONVERTER: 'org.apache.kafka.connect.json.JsonConverter'
-      CONNECT_INTERNAL_KEY_CONVERTER: 'org.apache.kafka.connect.json.JsonConverter'
-      CONNECT_INTERNAL_VALUE_CONVERTER: 'org.apache.kafka.connect.json.JsonConverter'
-      CONNECT_REST_ADVERTISED_HOST_NAME: 'localhost'
-      CONNECT_PLUGIN_PATH: '/plugins'
+
+#  connect:
+#    image: confluentinc/cp-kafka-connect:6.2.1
+#    hostname: connect
+#    depends_on:
+#      - broker
+#    volumes:
+#      - ./plugin-jars:/plugins
+#    ports:
+#      - "8082:8082"
+#    environment:
+#      CONNECT_BOOTSTRAP_SERVERS: 'local-broker:19092'
+#      CONNECT_REST_PORT: '8082'
+#      CONNECT_GROUP_ID: 'connect-quickstart'
+#      CONNECT_CONFIG_STORAGE_TOPIC: 'connect-quickstart-config'
+#      CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: 1
+#      CONNECT_OFFSET_STORAGE_TOPIC: 'connect-quickstart-offsets'
+#      CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: 1
+#      CONNECT_STATUS_STORAGE_TOPIC: 'connect-quickstart-status'
+#      CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
+#      CONNECT_KEY_CONVERTER: 'org.apache.kafka.connect.json.JsonConverter'
+#      CONNECT_VALUE_CONVERTER: 'org.apache.kafka.connect.json.JsonConverter'
+#      CONNECT_INTERNAL_KEY_CONVERTER: 'org.apache.kafka.connect.json.JsonConverter'
+#      CONNECT_INTERNAL_VALUE_CONVERTER: 'org.apache.kafka.connect.json.JsonConverter'
+#      CONNECT_REST_ADVERTISED_HOST_NAME: 'localhost'
+#      CONNECT_PLUGIN_PATH: '/plugins'
 
