--- a/src/main/resources/simplelogger.properties
+++ b/src/main/resources/simplelogger.properties
@@ -28,4 +28,5 @@ org.slf4j.simpleLogger.log.kafka.server=warn
 org.slf4j.simpleLogger.log.kafka.server.KafkaConfig=warn
 org.slf4j.simpleLogger.log.org.apache.kafka.connect=warn
 org.slf4j.simpleLogger.log.org.tonvanbart.wikipedia=debug
+org.slf4j.simpleLogger.log.org.apache.cxf.jaxrs.sse.client=debug
 
