changes to also run on local Confluent platform

--- a/plugin-jars/connect-standalone-local.properties
+++ b/plugin-jars/connect-standalone-local.properties
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# These are defaults. This file just demonstrates how to override some settings.
+# Refer to the bootstrap server as defined in the docker-compose file:
 bootstrap.servers=localhost:9092
 
 # The converters specify the format of data in Kafka and how to translate it into Connect data. Every Connect user will
@@ -29,15 +29,5 @@ offset.storage.file.filename=/tmp/connect.offsets
 # Flush much faster than normal, which is useful for testing/debugging
 offset.flush.interval.ms=10000
 
-# Set to a list of filesystem paths separated by commas (,) to enable class loading isolation for plugins
-# (connectors, converters, transformations). The list should consist of top level directories that include 
-# any combination of: 
-# a) directories immediately containing jars with plugins and their dependencies
-# b) uber-jars with plugins and their dependencies
-# c) directories immediately containing the package directory structure of classes of plugins and their dependencies
-# Note: symlinks will be followed to discover dependencies or plugins.
-# Examples: 
-# plugin.path=/usr/local/share/java,/usr/local/share/kafka/plugins,/opt/connectors,
-# plugin.path=/usr/share/java
-
+# for use on local system, refer to the (absolute) path where the result of the build is copied:
 plugin.path=/Users/ton/github/tonvanbart/kafka-connect-example/plugin-jars
