--- a/src/main/resources/simplelogger.properties
+++ b/src/main/resources/simplelogger.properties
@@ -19,7 +19,7 @@ org.slf4j.simpleLogger.showThreadName=true
 
 # Set to true if you want the last component of the name to be included in output messages.
 # Defaults to false.
-#org.slf4j.simpleLogger.showShortLogName=false
+org.slf4j.simpleLogger.showShortLogName=true
 
 org.slf4j.simpleLogger.log.irc.test=trace
 org.slf4j.simpleLogger.log.org.reflections.Reflections=error
