add compose and config for Bitnami Kafka images

--- a/connector.properties
+++ b/connector.properties
@@ -1,5 +1,6 @@
 name=local-sse-connector
 connector.class=org.tonvanbart.wikipedia.connect.WikiSourceConnector
 tasks.max=1
-bootstrap.servers=localhost:9092
+#bootstrap.servers=localhost:9092
 target.topic=wikievents
+wiki.language=nl
