--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <kafka.version>2.3.1</kafka.version>
+        <kafka.version>3.4.0</kafka.version>
         <kafka.scala.version>2.12</kafka.scala.version>
         <slf4j-simple.version>1.7.30</slf4j-simple.version>
         <mockito.version>3.5.7</mockito.version>
@@ -39,7 +39,7 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j-simple.version}</version>
-            <scope>test</scope>
+<!--            <scope>test</scope>-->
         </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.glassfish.jersey.core</groupId>-->
