--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     ports:
       - "9001:9001"
       - "5005:5005"
+      - "9999:9999"
     volumes:
       - ./plugin-jars:/plugins
       - ./connect/config:/config
@@ -45,6 +46,8 @@ services:
       KAFKA_HEAP_OPTS: "-Xmx1G -Xms1G"
       KAFKA_OPTS: "-Dlog4j.configuration=file:/data/log4j.properties -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
       EXTRA_ARGS: "-Dorg.apache.cxf.logger=org.apache.cxf.common.logging.Slf4jLogger"
+      KAFKA_JMX_OPTS: "-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.port=9999 -Djava.rmi.server.hostname=127.0.0.1"
+      JMX_PORT: "9999"
 
   schemaregistry:
     image: bitnami/schema-registry:7.5
